--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main>
     <h1>WHO IS THIS</h1>
-      <div class="guessImage">
+      <div id="guessImageWrapper">
         <img src="/images/benjamin_T.jpg" alt="" class="profileImage">
       </div>
       <div class="buttons">
