Added a randomBtn and images are now randomizing

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <main>
     <h1>WHO IS THIS</h1>
       <div id="guessImageWrapper">
-        <img src="/images/benjamin_T.jpg" alt="" class="profileImage">
+        <img src="" alt="" class="show">
       </div>
       <div class="buttons">
         <button class="btn">Name A</button>
         <button class="btn">Name B</button>
         <button class="btn">Name C</button>
         <button class="btn">Name D</button>
-      </div>
-      
+      </div>     
   </main>
+  <script src="students.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
