Fixed random names, duplicates and added a reset function

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
   <main>
-    <h1>WHO IS THIS</h1>
-      <div id="guessImageWrapper">
+    <h1>WHO THIS?</h1>
+      <div id="imageWrapper">
         <img src="" alt="" class="show">
       </div>
       <div class="buttons">
-        <button class="btn">Name A</button>
         <button class="btn">Name B</button>
         <button class="btn">Name C</button>
+        <button class="btn">Name A</button>
         <button class="btn">Name D</button>
       </div>     
   </main>
