Added a show result button that counts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <main>
-    <h1>WHO THIS?</h1>
+      <button class="resultBtn">Show result</button>
+      <div id="score" class="toggleScore"></div>
+      <h1>WHO`S THIS?</h1>
       <div id="imageWrapper">
         <img src="" alt="" class="show">
       </div>
@@ -18,7 +20,9 @@
         <button class="btn">Name C</button>
         <button class="btn">Name A</button>
         <button class="btn">Name D</button>
-      </div>     
+      </div>    
+      <div class="remainingStudents"></div>
+      <div class="score"></div> 
   </main>
   <script src="students.js"></script>
   <script src="script.js"></script>
