--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
   <title>Guess Person</title>
 </head>
 <body>
   <main>
+      <button class="startQuiz">Start quiz</button>
+    <div class="quizContainer show">
       <button class="resultBtn">Show result</button>
       <div id="score" class="toggleScore"></div>
       <h1>WHO`S THIS?</h1>
       <div id="imageWrapper">
-        <img src="" alt="" class="show">
+        <img src="" alt="">
       </div>
       <div class="buttons">
         <button class="btn">Name A</button>
@@ -23,6 +28,8 @@
       </div>    
       <div class="remainingStudents"></div>
       <div class="score"></div> 
+    </div>
+     
   </main>
   <script src="students.js"></script>
   <script src="script.js"></script>
